[docs] user api swagger doc update
